[package]

name = "pinnothera"
version = "0.1.0"
edition = "2021"
authors = ["Mark S. <the@wondersmith.dev>", "Dewbud <code@dewbud.dev>"]
license = "AGPL-3.0-or-later"


description = """
Named for the the pea crab (Pinnothera Faba), the smallest crab in the world,
pinnothera is a tiny utility for ensuring a Kubernetes application's SNS/SQS
topic and queue subscriptions are configured as expected whenever the application
is deployed to a cluster.
"""


[profile.dev]
debug = 2
opt-level = 0
incremental = true
codegen-units = 512


[profile.release]
lto = true  # Enable Link Time Optimization to remove dead code reduce binary size
debug = 0
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
panic = "abort"  # Don't include the rustc's unwinding code in release builds
codegen-units = 1  # Allow for maximum size reduction optimizations
incremental = true


[dependencies]

http = ">=0.2"
atomicell = "0.1.6"
aws-types = "0.48.0"
itertools = "0.10.3"
once_cell = "1.13.0"
serde_json = ">=1.0"
serde_yaml = ">=0.8"
aws-config = "0.48.0"
aws-sdk-sns = "0.18.0"
aws-sdk-sqs = "0.18.0"
aws-sdk-sts = "0.18.0"
aws-smithy-http = "0.48.0"
easy-error = { version = "*" }
k8s-openapi = { version = ">=0.15", features = ["v1_24"] }
clap = { version = ">=3.2", features = ["env", "derive"] }
serde = { version = "*", default-features = false, features = ["derive"] }
kube = { version = ">=0.73", default-features = false, features = ["client", "config", "rustls-tls"] }
tokio = { version = ">=1", default-features = false, features = ["fs", "net", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3.21", default-features = false, features = ["alloc", "async-await", "tokio-io"] }
